@@ -1517,14 +1517,14 @@ SCIP_RETCODE readBounds(
          /* remember variable type */
          oldvartype = SCIPvarGetType(var);
 
-         /* If a bound of a binary variable is given, the variable is converted into an integer variable
-          * with default bounds 0 <= x <= infinity before applying the bound. Note that integer variables
-          * are by default assumed to be binary, but an explicit lower bound of 0 turns them into integer variables.
-          * Only if the upper bound is explicitly set to 1, we leave the variable as a binary one.
+         /* convert into an integer variable with default bounds 0 <= x <= infinity if binary variable is not declared
+          * binary and not equipped with binary bounds, note that the default integer type is binary
           */
-         if( oldvartype == SCIP_VARTYPE_BINARY && !((mpsinputField1(mpsi)[0] == 'U' ||
-                  (mpsinputField1(mpsi)[0] == 'F' && mpsinputField1(mpsi)[1] == 'X')) && SCIPisFeasEQ(scip, val, 1.0))
-            && !(mpsinputField1(mpsi)[0] == 'F' && mpsinputField1(mpsi)[1] == 'X'&& SCIPisFeasEQ(scip, val, 0.0)) )
+         if( oldvartype == SCIP_VARTYPE_BINARY
+            && ( mpsinputField1(mpsi)[0] != 'B' || mpsinputField1(mpsi)[1] != 'V' )
+            && ( mpsinputField1(mpsi)[0] != 'U' || SCIPisFeasGT(scip, val, 1.0) )
+            && ( mpsinputField1(mpsi)[0] != 'F' || mpsinputField1(mpsi)[1] != 'X'
+            || SCIPisFeasNegative(scip, val) || SCIPisFeasGT(scip, val, 1.0) ) )
          {
             SCIP_CALL( SCIPchgVarType(scip, var, SCIP_VARTYPE_INTEGER, &infeasible) );
             assert(!infeasible);
@@ -1651,11 +1651,14 @@ SCIP_RETCODE readBounds(
          case 'P':
             SCIP_CALL( SCIPchgVarUb(scip, var, +SCIPinfinity(scip)) );
             break;
-         case 'B' : /* CPLEX extension (Binary) */
-            SCIP_CALL( SCIPchgVarLb(scip, var, 0.0) );
-            SCIP_CALL( SCIPchgVarUb(scip, var, 1.0) );
-            SCIP_CALL( SCIPchgVarType(scip, var, SCIP_VARTYPE_BINARY, &infeasible) );
-            /* don't assert feasibility here because the presolver will and should detect a infeasibility */
+         case 'B':
+            if( oldvartype != SCIP_VARTYPE_BINARY )
+            {
+               SCIP_CALL( SCIPtightenVarLb(scip, var, 0.0, TRUE, &infeasible, NULL) );
+               SCIP_CALL( SCIPtightenVarUb(scip, var, 1.0, TRUE, &infeasible, NULL) );
+               SCIP_CALL( SCIPchgVarType(scip, var, SCIP_VARTYPE_BINARY, &infeasible) );
+               /* presolving detects infeasibility */
+            }
             break;
          default:
             mpsinputSyntaxerror(mpsi);
